--- a/index.css
+++ b/index.css
@@ -82,3 +82,31 @@ button {
 button:active {
 	background-color: #ff0;
 }
+
+
+.copyright {
+    position: fixed;
+    right: 0;
+    bottom: 0;
+    opacity: 0.4;
+    font-family: monospace;
+    background-color: #fff;
+    transition: opacity 0.15s cubic-bezier(0.4, 0, 0.2, 1);
+    font-size: 100%;
+    padding: 1em;
+    text-decoration: none;
+    color: #000;
+    white-space: nowrap;
+}
+
+.copyright:hover {
+    opacity: 1;
+	text-decoration: none;
+}
+
+.copyright__license {
+}
+
+.copyright__author {
+    text-decoration: underline;
+}
