--- a/index.css
+++ b/index.css
@@ -63,8 +63,9 @@ body {
 	height: 90%;
 	box-sizing: border-box;
 	font-family: monospace;
+	white-space: pre;
 	resize: none;
-	background-color: rgba(255,255,255,0.75);
+	background-color: rgba(255, 255, 255, 0.75);
 	padding: 5px 10px;
 	border: none;
 }
@@ -80,7 +81,20 @@ button {
 }
 
 button:active {
-	background-color: #ff0;
+	background-color: #2ecc71;
+}
+
+
+.c_yes .c__input {
+	color: #27ae60;
+}
+
+.c_all .c__input {
+	color: #2980b9;
+}
+
+.c_not .c__input {
+	color: #c0392b;
 }
 
 
@@ -109,4 +123,12 @@ button:active {
 
 .copyright__author {
     text-decoration: underline;
+}
+
+
+@media (max-width: 610px) {
+	.c {
+		width: 100%;
+		height: 85%;
+	}
 }
