--- a/index.css
+++ b/index.css
@@ -71,6 +71,7 @@ body {
 }
 
 button {
+	font-size: 100%;
 	font-family: monospace;
 	box-sizing: border-box;
 	width: 100%;
@@ -105,7 +106,6 @@ button:active {
     bottom: 0;
     opacity: 0.4;
     font-family: monospace;
-    background-color: #fff;
     transition: opacity 0.15s cubic-bezier(0.4, 0, 0.2, 1);
     font-size: 100%;
     padding: 1em;
