--- a/index.css
+++ b/index.css
@@ -1,3 +1,12 @@
+:root {
+	--border-color: #dedede;
+	--background-color: #fff;
+}
+
+* {
+	box-sizing: border-box;
+}
+
 html {
 	height: 100%;
 }
@@ -15,12 +24,11 @@ body {
 	flex-wrap: wrap;
 	width: 33.3333%;
 	height: 90%;
-	border-bottom: 1px solid #dedede;
-	box-sizing: border-box;
+	border-bottom: 1px solid var(--border-color);
 }
 
 .c + .c {
-	border-left: 1px solid #dedede;
+	border-left: 1px solid var(--border-color);
 }
 
 .c__label {
@@ -30,10 +38,9 @@ body {
 	align-items: center;
 	justify-content: center;
 	padding: 5px 10px;
-	border-bottom: 1px solid #dedede;
+	border-bottom: 1px solid var(--border-color);
 	width: 80%;
 	height: 10%;
-	box-sizing: border-box;
 }
 
 .c__count {
@@ -43,49 +50,59 @@ body {
 	align-items: center;
 	justify-content: center;
 	padding-right: 10px;
-	border-bottom: 1px solid #dedede;
+	border-bottom: 1px solid var(--border-color);
 	width: 5%;
 	height: 10%;
-	box-sizing: border-box;
 	color: #ccc;
 }
 
 .c__clear {
-	box-sizing: border-box;
 	width: 15%;
 	height: 10%;
-	border-bottom: 1px solid #dedede;
-	border-left: 1px solid #dedede;
+	border-bottom: 1px solid var(--border-color);
+	border-left: 1px solid var(--border-color);
 }
 
 .c__input {
 	flex: 1;
 	height: 90%;
-	box-sizing: border-box;
 	font-family: monospace;
 	white-space: pre;
 	resize: none;
 	background-color: rgba(255, 255, 255, 0.75);
 	padding: 5px 10px;
 	border: none;
+    transition: box-shadow ease 0.15s;
+	box-shadow: inset 0 0 0 1px var(--background-color), inset 0 0 0 3px var(--background-color);
+    outline: none;
+    min-width: 0;
+}
+
+.c__input:focus {
+	box-shadow: inset 0 0 0 1px var(--background-color), inset 0 0 0 3px var(--border-color);
 }
 
 button {
 	font-size: 100%;
 	font-family: monospace;
-	box-sizing: border-box;
 	width: 100%;
 	height: 10%;
 	border: none;
 	background-image: none;
-	background-color: #fff;
+	background-color: var(--background-color);
 	border-radius: 0;
+    transition: box-shadow ease 0.15s;
+	box-shadow: inset 0 0 0 1px var(--background-color), inset 0 0 0 3px var(--background-color);
+    outline: none;
 }
 
 button:active {
 	background-color: #2ecc71;
 }
 
+button:focus {
+	box-shadow: inset 0 0 0 1px var(--background-color), inset 0 0 0 3px var(--border-color);
+}
 
 .c_yes .c__input {
 	color: #27ae60;
